--- a/src/views/Layouts/main.hbs
+++ b/src/views/Layouts/main.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fuerzaactiva app</title>
+    <title>daqing app</title>
     {{!--Fuente de google fonts--}}
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     {{!--FRAMEWORK BOOSTRAP4--}}
