--- a/src/views/admin/panel.hbs
+++ b/src/views/admin/panel.hbs
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-8 mx-auto text-center">
             <h1 class="display-4">¡Bienvenido, Administrador!</h1>
-            <p class="lead">Desde aquí puedes controlar todos los accesos vehiculares.</p>
+            <p class="lead">Desde aquí puedes observar y descargar todas las planillas de accesos vehicular.</p>
             <hr class="my-4">
             <p> Comencemos </p>
         </div>
@@ -16,7 +16,7 @@
                 </div>
                 <div class="card-body">
                     <p class="card-text">Chequea, administra y descarga el pdf de los accesos  vehiculares registrados en el sistema.</p>
-                    <a href="/admin/control" class="btn btn-outline-primary btn-block">Ver Registros</a>
+                    <a href="/admin/control" class="btn btn-outline-primary btn-block">Ver Planillas registradas</a>
                 </div>
             </div>
         </div>
