--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -56,7 +56,7 @@
                 {{else}}
                     {{!-- Opciones Visibles cuando NO hay usuario logueado --}}
                     <li class="nav-item">
-                        <a href="/signin" class="nav-link">Iniciar Sesión</a>
+                        <a href="/signin" class="nav-link"></a>
                     </li>
                     {{/if}}
             </ul>
