--- a/src/views/links/add.hbs
+++ b/src/views/links/add.hbs
@@ -12,69 +12,69 @@
                     <div class="form-group row" > 
                         <div class= "col-md-12 mb-2">
                         <strong>N° de Registro:</strong>
-                        <input type="text" class="form-control form-control-sm"   name="numero_registro" placeholder="N° 1..." autofocus>
+                        <input type="text" class="form-control form-control-sm"   name="numero_registro" placeholder="N° 1..." autofocus required>
                     </div>
                     </div>
                     <div class="form-group row" > 
                         <div class= "col-md-12 mb-2">
                         <strong>Empresa (Nombre)::</strong>
-                        <input type="text" class="form-control form-control-sm"   name="nombre_empresa" placeholder="Empresa C.A.">
+                        <input type="text" class="form-control form-control-sm"   name="nombre_empresa" placeholder="Empresa C.A." required>
                     </div>
                     </div>
                     <div class="form-group row" > 
                         <div class= "col-md-12 mb-2">
                         <strong>Nombres y Apellidos:</strong>
-                        <input type="text" class="form-control form-control-sm"   name="nombre_apellido" placeholder="Wilmer Antonio Perez Rojas">
+                        <input type="text" class="form-control form-control-sm"   name="nombre_apellido" placeholder="Wilmer Antonio Perez Rojas" required>
                     </div>
                     </div>
                     <div class="form-group row" > 
                         <div class= "col-md-12 mb-2">
                         <strong>Cédula/Rif:</strong>
-                        <input type="text" class="form-control form-control-sm"   name="cedula_rif" placeholder=" V-26.821.179 Ó j-41043916-5">
+                        <input type="text" class="form-control form-control-sm"   name="cedula_rif" placeholder=" V-26.821.179 Ó j-41043916-5"required>
                     </div>
                     </div>
                     
                     <div class="form-group row" > 
                         <div class= "col-md-12 mb-2">
                         <strong> Telefono:</strong>
-                        <input type="text" class="form-control form-control-sm"   name="telefono" placeholder="+58414-9513574">
+                        <input type="text" class="form-control form-control-sm"   name="telefono" placeholder="+58414-9513574"required>
                     </div>
                     </div>
                      <div class="form-group row" > 
                         <div class= "col-md-12 mb-2">
                         <strong> Placa (Vehículo):</strong>
-                        <input type="text" class="form-control form-control-sm"   name="placa_vehiculo" placeholder="MBV35C">
+                        <input type="text" class="form-control form-control-sm"   name="placa_vehiculo" placeholder="MBV35C"required>
                     </div>
                     </div>
                       <div class="form-group row" > 
                         <div class= "col-md-12 mb-2">
                         <strong> Hora (Entrada):</strong>
-                        <input type="text" class="form-control form-control-sm"   name="hora_entrada" placeholder="03:40 pm">
+                        <input type="text" class="form-control form-control-sm"   name="hora_entrada" placeholder="03:40 pm"required>
                     </div>
                     </div>
                       <div class="form-group row" > 
                         <div class= "col-md-12 mb-2">
                         <strong> Hora (Salida):</strong>
-                        <input type="text" class="form-control form-control-sm"   name="hora_salida" placeholder="05:40 pm">
+                        <input type="text" class="form-control form-control-sm"   name="hora_salida" placeholder="05:40 pm"required>
                     </div>
                     </div>
                       
                       <div class="form-group row" > 
                         <div class= "col-md-12 mb-2">
                         <strong> Firma: </strong>
-                        <input type="text" class="form-control form-control-sm"   name="firma" placeholder="Wilmer Perez">
+                        <input type="text" class="form-control form-control-sm"   name="firma" placeholder="Wilmer Perez"required>
                     </div>
                     </div>
                     <div class="form-group row">
                         <div class="col-md-12 mb-2">
                         <strong class="my-1 mr-4 mb-0"> Fecha </strong>
-                        <input type="date" class="form-control form-control-sm" name="fecha_registro"  placeholder="Fecha Registro ">
+                        <input type="date" class="form-control form-control-sm" name="fecha_registro"  placeholder="Fecha Registro " required>
                     </div>
                     </div>
                     <div class="form-group row">
                         <div class="col-md-12 mb-2">
                         <strong> Observaciones: </strong>  
-                        <textarea  type= "text "name="observaciones" rows= "2" class="form-control form-control-sm"  placeholder="!conductor sospechoso. etc...¡ "></textarea>
+                        <textarea  type= "text "name="observaciones" rows= "2" class="form-control form-control-sm"  placeholder="!conductor sospechoso. etc...¡ "required></textarea>
                     </div>
                     </div>
                     <div class="form-group row">
